Fixing scroll on mobile ios

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,8 @@
 
 
 
-@supports (-webkit-touch-callout: none) {
-  .h-screen {
-    height: -webkit-fill-available;
-  }
-}
+/* @supports (-webkit-touch-callout: none) { */
+/*   .h-screen { */
+/*     height: -webkit-fill-available; */
+/*   } */
+/* } */
